# TradeAgent

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  ALPACA_ADAPTER_COMPLETE.md  ALPACA_FEATURES_ANALYSIS.md  AUTOMATED_TRADING_SETUP.md  CLAUDE.md  Dockerfile  FINAL_STATUS_ULTRA.md  INITIAL.md  INSIGHTS.md  Idee1.md  LICENSE  LLM_INTEGRATION_RESULTS.md  ML_DATA_COLLECTION_READY.md  PHASE_1_2_IMPLEMENTATION_COMPLETE.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PLANNING.md  README.md  SESSION_2025-11-19_COMPLETE.md  STATUS.md  TASK.md  TRADING_STRATEGIES_OVERVIEW.md  ULTRA_ENHANCEMENT_ANALYSIS.md  USER_TASK.md  analyze_strategy_performance.py  backtest_simple.py  check_positions.py  check_status.py  check_supabase_project.py  create_closed_trades.py  create_supabase_tables.py  create_tables_direct.py  create_tables_now.py  create_tables_postgres.py  docker-compose.yml  execute_schema.py  fix_rls_security.py  performance_comparison.py  (+29 more)
PRPs/: PRP_update3.md  intelligent-paper-trading-system.md
database/: enable_rls.sql
deployment/: README.md  install_systemd.sh  tradeagent.service  tradeagent.timer
feature_requests/: init_feature2.md  init_ml_data_collection.md  webhooktotradecode.txt
scripts/: label_trades.py  setup_supabase.py
src/: __init__.py  main.py
src/adapters/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_indicators.py  test_integration.py  test_mcp_clients.py  test_models.py  test_news_aggregator_manual.py  test_news_strategy_manual.py  test_performance_advanced.py  test_risk_manager.py  test_sentiment_engine_manual.py  test_strategies.py
(+49 files in other folders)
